10-1-kuard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  labels:
    run: kuard
spec:
  selector:
    matchLabels:
      run: kuard
  replicas: 2
  template:
    metadata:
      labels:
        run: kuard
    spec:
      containers:
      - name: kuard
        image: jmutai/kuard-amd64:blue
