alpaca-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    app: alpaca
    ver: "1"
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpaca
      ver: "1"
      env: prod
  template:
    metadata:
      labels:
        app: alpaca
        ver: "1"
        env: prod
    spec:
      containers:
        - image: jmutai/kuard-amd64:blue
          name: kuard
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
