bandicoot-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-prod
  labels:
    app: bandicoot
    ver: "2"
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bandicoot
      ver: "2"
      env: prod
  template:
    metadata:
      labels:
        app: bandicoot
        ver: "2"
        env: prod
    spec:
      containers:
        - image: ralphkube/kuard-amd64:green
          name: kuard
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
