kuard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: kuard
  name: kuard
  namespace: k8suprun
spec:
  progressDeadlineSeconds: 120
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: kuard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: kuard
      annotations:
            kubernetes.io/change-cause: "Update to green kuard"
    spec:
      containers:
      - image: ralphkube/kuard-amd64:green
        imagePullPolicy: IfNotPresent
        name: kuard
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
